--- a/css/solarized-sakai-light.css
+++ b/css/solarized-sakai-light.css
@@ -58,6 +58,7 @@ pre {
 .navIntraTool {
   background-color: #fdf6e3 !important;
 }
+.instruction,
 .sakaiCopyrightInfo {
   color: #657b83 !important;
 }
@@ -65,7 +66,7 @@ pre {
   background-color: #e9e1c8 !important;
 }
 ul.makeMenu {
-  background: #e9e1c8;
+  background-color: #e9e1c8 !important;
   border: 1px solid #e9e1c8 !important;
 }
 tr.external {
