--- a/sites/sakai.styl
+++ b/sites/sakai.styl
@@ -37,6 +37,7 @@ pre
 .navIntraTool
     background-color ()
 
+.instruction
 .sakaiCopyrightInfo
     color ()
 
@@ -45,7 +46,7 @@ pre
         background-color color-background-highlight-extra-less
 
 ul.makeMenu
-    background color-background-highlight-extra-less
+    background-color color-background-highlight-extra-less
     border 1px solid color-background-highlight-extra-less i
 
 tr.external
